--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ever-notedown",
+  "name": "evernotedown",
   "main": "./lib/ever-notedown",
   "version": "0.2.11",
   "description": "Edit Evernote notes in Atom with Markdown via AppleScript (OSX only currently)",
@@ -34,7 +34,7 @@
     "temp": "^0.7.0",
     "underscore-plus": "^1.0.0",
     "cheerio": "^0.18.0",
-    "inline-css": "git://github.com/cs150bf/inline-css",
+    "inline-css": "https://github.com/cs150bf/inline-css.git",
     "mime": "*",
     "season": "^5.0.2"
   }
